First commited as before_61954_rev1