@@ -494,7 +494,7 @@ new UpdateValueStrategy().setConverter(toDouble).setAfterGetValidator(validator)
         // and vice versa.
         Converter negatingConverter = new Converter(boolean.class, boolean.class) {
             private Boolean negated(Boolean booleanObject) {
-                return Boolean.valueOf(!booleanObject.booleanValue());
+                return new Boolean(!booleanObject.booleanValue());
             }
 
             @Override
